feat: Implement initial e-commerce platform with comprehensive admin panel, advanced product filtering, and client-side pages.

--- a/front/src/translations/ar.json
+++ b/front/src/translations/ar.json
@@ -821,7 +821,7 @@
             "state": "الولاية",
             "no_message": "لم يتم تقديم رسالة",
             "approve_title": "الموافقة على الشريك",
-            "approve_desc": "سيتمت الموافقة على هذا الشريك بكلمة مرور تجريبية \"djchallenger\". يرجى مشاركة كلمة المرور هذه مع الشريك بعد الموافقة.",
+            "approve_desc": "سيتمت الموافقة على هذا الشريك بكلمة مرور تجريبية \"dfixventure\". يرجى مشاركة كلمة المرور هذه مع الشريك بعد الموافقة.",
             "demo_password": "كلمة مرور تجريبية",
             "demo_hint": "يمكن للشريك تسجيل الدخول باستخدام كلمة المرور هذه وسيُطلب منه تغييرها.",
             "approving": "جارٍ الموافقة...",
