--- a/front/src/translations/de.json
+++ b/front/src/translations/de.json
@@ -799,7 +799,7 @@
             "state": "Bundesland",
             "no_message": "Keine Nachricht angegeben",
             "approve_title": "Partner genehmigen",
-            "approve_desc": "Dieser Partner wird mit dem Demo-Passwort \"djchallenger\" genehmigt. Bitte teilen Sie dieses Passwort dem Partner nach der Genehmigung mit.",
+            "approve_desc": "Dieser Partner wird mit dem Demo-Passwort \"dfixventure\" genehmigt. Bitte teilen Sie dieses Passwort dem Partner nach der Genehmigung mit.",
             "demo_password": "Demo-Passwort",
             "demo_hint": "Der Partner kann sich mit diesem Passwort anmelden und wird aufgefordert, es zu ändern.",
             "approving": "Genehmigen...",
