--- a/front/src/translations/fr.json
+++ b/front/src/translations/fr.json
@@ -814,7 +814,7 @@
             "state": "État",
             "no_message": "Aucun message fourni",
             "approve_title": "Approuver le partenaire",
-            "approve_desc": "Ce partenaire sera approuvé avec le mot de passe de démonstration \"djchallenger\". Veuillez partager ce mot de passe avec le partenaire après approbation.",
+            "approve_desc": "Ce partenaire sera approuvé avec le mot de passe de démonstration \"dfixventure\". Veuillez partager ce mot de passe avec le partenaire après approbation.",
             "demo_password": "Mot de passe de démonstration",
             "demo_hint": "Le partenaire peut se connecter avec ce mot de passe et sera invité à le changer.",
             "approving": "Approbation...",
