--- a/front/src/translations/hi.json
+++ b/front/src/translations/hi.json
@@ -821,7 +821,7 @@
             "state": "राज्य",
             "no_message": "कोई संदेश प्रदान नहीं किया गया",
             "approve_title": "भागीदार को मंजूरी दें",
-            "approve_desc": "इस भागीदार को डेमो पासवर्ड \"djchallenger\" के साथ मंजूरी दी जाएगी। कृपया मंजूरी के बाद भागीदार के साथ यह पासवर्ड साझा करें।",
+            "approve_desc": "इस भागीदार को डेमो पासवर्ड \"dfixventure\" के साथ मंजूरी दी जाएगी। कृपया मंजूरी के बाद भागीदार के साथ यह पासवर्ड साझा करें।",
             "demo_password": "डेमो पासवर्ड",
             "demo_hint": "भागीदार इस पासवर्ड के साथ लॉगिन कर सकता है और इसे बदलने के लिए कहा जाएगा।",
             "approving": "मंजूरी दी जा रही है...",
