--- a/front/src/translations/ja.json
+++ b/front/src/translations/ja.json
@@ -735,7 +735,7 @@
             "state": "都道府県",
             "no_message": "メッセージなし",
             "approve_title": "パートナーを承認",
-            "approve_desc": "このパートナーはデモパスワード「djchallenger」で承認されます。承認後、このパスワードをパートナーと共有してください。",
+            "approve_desc": "このパートナーはデモパスワード「dfixventure」で承認されます。承認後、このパスワードをパートナーと共有してください。",
             "demo_password": "デモパスワード",
             "demo_hint": "パートナーはこのパスワードでログインでき、変更するように求められます。",
             "approving": "承認中...",
