--- a/front/src/translations/zh.json
+++ b/front/src/translations/zh.json
@@ -799,7 +799,7 @@
             "state": "州/省",
             "no_message": "未提供消息",
             "approve_title": "批准合作伙伴",
-            "approve_desc": "此合作伙伴将被批准并分配演示密码 \"djchallenger\"。情在批准后将此密码分享给合作伙伴。",
+            "approve_desc": "此合作伙伴将被批准并分配演示密码 \"dfixventure\"。情在批准后将此密码分享给合作伙伴。",
             "demo_password": "演示密码",
             "demo_hint": "合作伙伴可以使用此密码登录并会被提示更改密码。",
             "approving": "正在批准...",
